cropper fixes part 2

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
     right: 0;
     text-align: center;
     background-color: gray;
+    z-index: 10;
 }
 
 .painterro-wrapper.ptro-v-aligned:before {
